--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -1,16 +1,16 @@
-name: Build and deploy pakage
+name: Build and deploy package
 
 on:
   push:
-    braches:
-      -main
+    branches:
+      - main
 
-jobs: 
+jobs:
   build-and-deploy:
-    runs-on: ubuntu-lastet
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/chekout@main
+    - uses: actions/checkout@main
 
     - name: Set up .NET Core
       uses: actions/setup-dotnet@v2
@@ -19,11 +19,11 @@ jobs:
     
     - name: Build with dotnet
       run: dotnet build --configuration Release
-    
+
     - name: Test
       run: dotnet test
-
-    - name: Create the package
+    
+    - name: Create the Package
       run: dotnet pack --configuration Release
 
     - name: Publish
