--- a/MoneyExtension/MoneyExtension.csproj
+++ b/MoneyExtension/MoneyExtension.csproj
@@ -13,8 +13,8 @@
     <Company>balta.io</Company>
     <PackageDescription>Extension to convert decimal to integer</PackageDescription>
     <Description>Extension to convert decimal to integer</Description>
-    <RepositoryUrl>https://github.com/Leone-custodio/money-extensions</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/Leone-custodio/money-extensions</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Leone-custodio/money-extensions.git</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Leone-custodio/money-extensions.git</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
     <PackageTags>money;int;decima;converter</PackageTags>
